--- a/gb/22/4/2/n13690935.md
+++ b/gb/22/4/2/n13690935.md
@@ -13,6 +13,11 @@
 <p>英国国防部在情报更新中说，“经过激烈战斗，乌克兰军队在哈尔科夫东部获得了一条关键路线。”</p>
 <p><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF.md#1">俄罗斯</a>周五指控乌军直升机越境，空袭了俄边境城市的一个燃料库，导致大火。周六，俄军宣称，使用了“高精度远程空基和海基武器”击中了位于乌克兰中部城市克雷门丘克（Kremenchuk）的炼油厂。</p>
 <h2>以下是4月2日俄乌局势实时更新：</h2>
+<h3>消息：和平条约草案进入后期阶段</h3>
+<p>乌克兰国际文传电讯社报导说，俄罗斯已表明和平条约草案已进入后期阶段。该通讯社援引乌克兰谈判代表大卫·阿拉卡米亚（David Arakhamia）的话说，谈判已进入直接磋商阶段。</p>
+<p>报导说，阿拉卡米亚告诉乌克兰电视台，俄罗斯已经接受了乌克兰的总体立场，但对克里米亚的立场除外。</p>
+<p>他说，如果俄罗斯总统普京要与乌克兰领导人泽连斯基会面，地点很可能是在土耳其。</p>
+<p>他还说，土耳其总统埃尔多安周五给两位领导人打了电话，“似乎他那边确认，准备在不久的将来安排一次俄乌领导人会面”。</p>
 <h3>乌国防高官：基辅地区已摆脱俄军控制</h3>
 <figure id="attachment_13691414" aria-describedby="caption-attachment-13691414" style="width: 572px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/04/id13691414-GettyImages-1239694133.jpg"><img class="size-medium_vertical wp-image-13691414" src="https://i.epochtimes.com/assets/uploads/2022/04/id13691414-GettyImages-1239694133-572x400.jpg" alt="" width="572" b="400" /></a><figcaption id="caption-attachment-13691414" class="wp-caption-text">2022年4月2日，一名乌克兰士兵乘坐装甲车在基辅西北部的布卡（Bucha）街道上巡逻。乌克兰国防部副部长当天说，在俄军从首都附近一些重要城镇撤退后，乌方已重新控制整个基辅地区。(RONALDO SCHEMIDT/AFP via Getty Images)</figcaption></figure>
 <p>乌克兰国防部副部长汉娜·玛丽亚（Hanna Maliar）周六说，基辅地区已经摆脱俄军控制。</p>
@@ -31,7 +36,6 @@
 <p>“克雷门丘克（Kremenchuk），很多导弹（周六）上午袭击了该城市。”卢宁补充道。</p>
 <p>俄罗斯国防部发言人伊戈尔?科纳申科夫(Igor Konashenkov)在周六的简报中说，俄军袭击了克雷门丘克的炼油厂，摧毁了储存汽油和柴油的设施，这些设施为乌克兰东部和中部地区的部队提供了汽油和柴油燃料。</p>
 <p>卢宁说，三架俄罗斯飞机在当地时间周六上午6点左右实施了这次袭击。</p>
-<h3></h3>
 <h3>乌克兰国家核能发电公司：扎波罗热核电站附近遭袭</h3>
 <p>位于扎波罗热（Zaporizhzhia）核电站附近的乌克兰恩纳霍达市（Enerhodar）据称周六发生了一系列爆炸。</p>
 <p>乌克兰国家核机构在其官方Telegram频道上报告了当天发生的袭击事件。</p>
@@ -115,8 +119,6 @@
 <p>俄罗斯航天局局长德米特里?罗戈津（Dmitry Rogozin）周六发布推文，暗示俄罗斯可能会因西方的制裁而终止在国际空间站（ISS）的合作。</p>
 <p>“我相信，只有在完全和无条件地取消非法制裁之后，国际空间站和其它联合项目中合作伙伴之间的正常关系才有可能恢复。”罗戈津在推特上说。</p>
 <p>罗戈津警告说，俄罗斯航天局将就结束与美国、加拿大、欧盟和日本的航天机构在国际空间站的合作的可能性，准备“向我国领导人提出具体建议”。</p>
-<h3></h3>
-<p>&nbsp;</p>
 <h3>泽连斯基：对俄罗斯的制裁正在奏效 但应加强</h3>
 <p>乌克兰总统泽连斯基周五（4月2日）在接受福克斯新闻采访时表示，对俄罗斯的制裁正在发挥作用，但需要加强。</p>
 <p>“制裁肯定有效，俄罗斯肯定害怕制裁。这让他们感到不舒服。它打击了他们的经济。但一个问题是制裁如何运作。我们正在向美国和欧洲领导人展示并告诉他们，每个人都必须迅速合作。”泽连斯基说。</p>
@@ -131,13 +133,13 @@
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689482.md#1">俄石油公司燃料库发生大火 视频曝光</a></li>
 <li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689683.md#1">乌情报：在俄入侵前 中共大规模网攻乌克兰</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690617.md#1">【十字路口】为俄助攻 中共网军提前进攻乌国？</a></li>
 <li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689827.md#1">新世纪力作《演员梦》获七奖 两女主双双获奖</a></li>
-<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13691366.md#1">俄乌战影响 大连港到欧洲铁路出口骤降</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/5/n10026687.md#1" target="_blank">金剑：秦朝以后的中国是半民主社会</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/20/n11398383.md#1" target="_blank">人权组织执行主任：一起曝光中共邪恶罪行</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/18/n11196827.md#1" target="_blank">【征文】张东园：中国国学大师的血泪遭遇(3)</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/17/n10401300.md#1" target="_blank">三位西方富豪的经商成功之道</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
