--- a/gb/22/4/2/n13690935.md
+++ b/gb/22/4/2/n13690935.md
@@ -139,7 +139,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/5/n10280071.md#1" target="_blank">路目：孔子诛杀少正卯 惹恼了谁？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/6/n11368594.md#1" target="_blank">二度死里逃生 前大陆白领熬过酷刑迎来自由</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/14/n9955432.md#1" target="_blank">文革中自杀的几个名人（3）红岩作者罗广斌</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/10/n11248618.md#1" target="_blank">救母何惧强暴 正义存于人心</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
